--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,12 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
+        include:
+        - os: ubuntu-latest
+          codecov-flag: GHA_Ubuntu
+        - os: macos-latest
+          codecov-flag: GHA_macOS
 
     steps:
     - uses: actions/checkout@v2
@@ -28,8 +33,27 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e .[tests]
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: pytest --cov
     - name: Upload coverage
-      run: bash <(curl -s https://codecov.io/bash)
+      run: bash <(curl -s https://codecov.io/bash) -F ${{ matrix.codecov-flag }}
+
+  build_win:
+
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -e .[tests]
+    - name: Test with pytest
+      run: pytest
