--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [build-system]
 requires = [
     "setuptools>=42",
-    "wheel"
+    "setuptools_scm",
+    "wheel",
+    "pip>=21",
 ]
 build-backend = "setuptools.build_meta"
