--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [bdist_wheel]
-universal = 1
+universal = 0
 
 [coverage:run]
-source = pimento
+source = imforge
 
 [coverage:report]
 ignore_errors = False
