--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,17 +7,13 @@ on:
   pull_request:
     branches: [develop]
 
-env:
-  PROJECT_NAME: "pyclipper"
-  BUILD_DEPENDS: "Cython setuptools>=25 setuptools_scm setuptools_scm_git_archive"
-
 jobs:
   build:
 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: 3.7
         os: [ubuntu-latest]
 
     steps:
@@ -37,10 +33,10 @@ jobs:
         python -m build
     - name: Deploy
       # only run if the commit is tagged...
-      # if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/')
       env:
         TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: |
         python -m pip install --upgrade twine
         python -m twine upload --repository testpypi dist/*
