--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: |
         python -m pip install --upgrade twine
-        python -m twine upload --repository testpypi dist/*
+        python -m twine upload dist/*
